model, dto, repository, service, controller done, 1 test done, swagger done